# v4l2_gl_filter

./: .rustfmt.toml  Cargo.toml  README.md
shaders/: filter.frag  main.frag  screen_rect.vert
src/: _main.rs  example0.rs  gl_filter.rs  main.rs  renderer.rs
