[package]
name = "v4l2_gl_filter"
version = "0.1.0"
edition = "2021"

[dependencies]
zune-jpeg = "0.3.17"
turbojpeg = { version = "0.5.3", features = ["image"] }
glow = "0.12.3"
sdl2 = "0.35.2"
v4l = "0.14.0"

[profile.dev.package.zune-jpeg]
opt-level = 3

[[bin]]
name = "v4l2_gl_filter"
path = "src/main.rs"
